scss/main.scss
@use "sass:color";
@use "config";
@use "menu";
@use "mobile";

* {
    box-sizing: border-box;
}

body {
    @include config.background;
    background: config.$primary-color;
    color: config.set-text-color(config.$primary-color);
    height: 100%;
    margin: 0;
    font-family: 'PIXELIFY_SANS', sans-serif;
    line-height: 1.5;

    width: 100%;
    overflow-x: hidden;
}

// headings
h1, h2, h3 {
    margin: 0;
    font-weight: 400;
    &.lg-heading {
        color: config.set-text-color(config.$primary-color);
    }

    &.sm-heading {
        margin-bottom: 2rem;
        padding: 0.2rem 1rem;
        background: rgba(color.adjust(config.$primary-color, $lightness: 2%), 0.5);
        color: config.set-text-color(config.$primary-color);
    }
}

a {
    color: #fff;
    text-decoration: none;
}

header {
    position: fixed;
    z-index: 2;
    width: 100%;
}

.text-secondary {
    color: config.$secondary-color;
}

main {
    padding: 1rem;
    height: 100%;

    .icons {
        margin-top: 1rem;

        a {
            padding: 0.4rem;
            color: config.set-text-color(config.$primary-color);

            &:hover {
                color: config.$secondary-color;
                @include config.easeOut();
            }
        }
    }

    &#home {
        overflow: hidden;
        h1 {
            margin-top: 20vh;
        }
    }

    &#portfolio,
    &#about,
    &#project-page {
        overflow: hidden;
        h1 {
            margin-top: 8vh;
        }
    }
}

.about-info {
    display: grid;
    gap: 30px;

    grid-template-areas: 
        'bio'
        'job1'
        'job2'
        'job3';

    grid-template-columns: 1fr;

    .bio {
        grid-area: bio;
        font-size: 1.5rem;
        a {
            color: config.set-text-color(config.$primary-color);
            text-decoration: underline;

            &:hover {
                color: config.$secondary-color;
            }
        }
    }

    .job-1 {
        grid-area: job1;
    }

    .job-2 {
        grid-area: job2;
    }

    .job-3 {
        grid-area: job3;
    }

    @include config.mediaLg {
        grid-template-areas: 
        'bio bio bio'
        'job1 job2 job3';

        grid-template-columns: repeat(3, 1fr);
    }

    @include config.mediaXl {
        grid-template-areas:
        'bio bio bio'
        'job1 job2 job3';

        grid-template-columns: repeat(3, 1fr);
    }

    .job {
        background-color: color.adjust(config.$primary-color, $lightness: -7.5%);
        border-radius: 25px;
        padding: 0.5rem;
        border-bottom: config.$secondary-color 3px solid;
    }
}

.projects {
    display: grid;
    gap: 0.7rem;
    grid-template-columns: 1fr;

    @include config.mediaMd { grid-template-columns: repeat(2, 1fr) };
    @include config.mediaLg { grid-template-columns: repeat(3, 1fr) }; 
    @include config.mediaXl { grid-template-columns: repeat(4,1fr) };

    img {
        width: 100%;
        border: 3px config.set-text-color(config.$primary-color) solid;

        &:hover {
            opacity: 0.5;
            @include config.easeOut;
        }
    }

    .item {
        margin-top: 1rem;

        a {
            padding: 0.4rem;
            color: config.set-text-color(config.$primary-color);

            &:hover {
                color: config.$secondary-color;
                @include config.easeOut();
            }
        }
    }

}

.project-info {
    display: grid;
    gap: 30px;
    grid-template-columns: 1fr;

    .gallery {
        display: grid;
        grid-template-columns: repeat(3, 1fr);
        gap: 15px;
        
        h2 {
            text-align: left;
            grid-column: 1 / span 3;
        }

        img {
            width: 100%;
            display: block;
        }

        a {
            text-align: left;
            grid-column: 1 / span 3;
            color: config.set-text-color(config.$primary-color);
            padding-left: 1rem;
            &:hover {
                color: config.$secondary-color;
                @include config.easeOut;
            }
        }
    }

    .description {
        text-align: left;

        p {
            padding-left: 1rem;
            padding-right: 1rem;
        }

        a {
            text-decoration: underline;
            color: config.set-text-color(config.$primary-color);

            &:hover {
                color: config.$secondary-color;
            }
        }
    }
}

